add requested changes

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="first-nav-wrap">
-    <div class="first-nav">
+    <div class="container first-nav">
       <ul class="settings-and-social-list">
         <li><a href="#"><img src="img/twitterlogo.png" alt="twitter-icon"></a></li>
         <li><a href="#"><img src="img/linkedinlogo.png" alt="linkedin-icon"></a></li>
@@ -31,7 +31,7 @@
 
     <!-- main header section starts here -->
 
-    <header class="main-header-container flex">
+    <header class="container main-header-container flex">
       <div>
         <a href="index.html"><img class="logo" src="img/newslogo.png" alt="logo" /></a>
       </div>
@@ -61,14 +61,14 @@
         <div class="about-hero-container">
           <div>
             <div class="hero-headline-title">  
-              <h1 class="hero-headline-title text-accent-400 ">Read more about div <br>news right here </h1>
+              <h1 class="hero-headline-title text-accent-400 ">READ MORE ABOUT DIV <br>NEWS RIGHT HERE </h1>
             </div>
             <div class="about-text">
             <p>Div News is rated the number one news source for all things tech related,<br> Founded by our top contributors in 1995 we stand as the longest running news source for the tech industry.
               We are proud of the ever growing numbers. as well as our rapidly growing contributors. Have something tech related to share? find out how you too can become a top contributor, by contributing informstion via our news lead intake system, simply send an email with the tech related topic you'd like to contribute to
             </p>
             </div>
-            <p>contributors intake Email
+            <p>please contact us by Email for any further questions or to join our contributors
             </p>
             <div class="email-container">
             <a class="email" href="mailto:name@email.com">contributor@divnews.com</a>
@@ -112,11 +112,10 @@
         </div>
         <div class="past-collaborators-container">
           <div class="past-collab-section">
-            <img class="collabimage" src="img/pastcollabsone.png" alt="pastcollabsone">
-         
+            <img class="collabimage" src="img/about_2013.png" alt="pastcollabsone">
           </div>
           <div class="past-collab-section">
-            <img class="collabimage"src="img/pastcollabstwo.png" alt="pastcollabstwo">
+            <img class="collabimage"src="img/about_2011.png" alt="pastcollabstwo">
           </div>
         </div>
       </div>
@@ -130,7 +129,7 @@
       <div id="main-sponsors">
       <div class="container">
           <div>
-            <h2 class="title fs-700 text-neutral-100 fw-semi-bold">Main Sponsors</h2>
+            <h2 class="title fs-700 text-accent-100: #F8F8F8; fw-semi-bold">Main Sponsors</h2>
             <div class="indicator"></div>
           </div>
           <div class="about-sponsors-icon-container">
@@ -154,11 +153,14 @@
   <footer class="about-footer-container" >
     <div class="container">
       <div class="footer-container">
-        <div>
+        <div class="newslogo">
           <a href="#"><img src="img/newslogo.png" alt="logo"></a>
         </div>
         <div>
             <p>Copyright 2022. All Rights Reserved</p>
+            <div class="lorem">
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto<br> at inventore maxime vel qui, commodi et! Eveniet dolorem saepe consectetur.</p>
+            </div>
         </div>
       </div>
     </div>
