add styling to hero section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="blog-updates">
             <p class="fs-600">Stay up to date with the latest in tech simply, by bookmarking our page to get notifications and <br> stay in the loop on all the tech trends.</p>
           </div>
-          <div class="blog-dates1" class="text-neutral-100 fw-bold ">UPDATED: (MON) - (FRI)</h2>
+          <div class="blog-dates1" class="text-neutral-100 fw-bold ">UPDATED:(MON - FRI)</h2>
           </div>
           <div class="blog-dates2">
             <h2 class="fs-600 text-neutral-900">bookmark us and stay in the loop</h2>
