add link to top contributors button

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       <!-- contributors section starts here -->
 
-    <section class="contributors ">
+    <section id="contributors">
       <div class="container ">
         <div>
           <h2 class="title fs-700 text-neutral-900 fw-semi-bold">Top contributors</h2>
