removed code from logo design

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -33,7 +33,7 @@
 
     <header class="container main-header-container flex">
       <div>
-        <a href="index.html"><img class="logo" src="img/newslogo.png" alt="logo" /></a>
+        <a href="index.html"><img class="logo" src="img/singlelogo.png" alt="logo" /></a>
       </div>
       
       <!-- main header section ends here -->
@@ -154,7 +154,7 @@
     <div class="container">
       <div class="footer-container">
         <div class="newslogo">
-          <a href="#"><img src="img/newslogo.png" alt="logo"></a>
+          <a href="#"><img src="img/singlelogo.png" alt="logo"></a>
         </div>
         <div>
             <p>Copyright 2022. All Rights Reserved</p>
