--- a/index.html
+++ b/index.html
@@ -12,24 +12,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<!-- settings and social media nav starts here -->
-
 <body>
-  <!-- <div class="first-nav-wrap">
-    <div class="container first-nav">
-      <ul class="settings-and-social-list">
-        <li><a href="#"><img src="img/twitterlogo.png" alt="twitter-icon"></a></li>
-        <li><a href="#"><img src="img/linkedinlogo.png" alt="linkedin-icon"></a></li>
-          <li><a href="#">English</a></li>
-          <li><a href="#">My page</a></li>
-          <li><a href="#">Logout</a></li>
-      </ul>
-     </div>
-    </div>
-   -->
-
-   
-    <!-- settings and social media nav ends here -->
 
     <!-- main header starts here -->
 
@@ -47,7 +30,7 @@
     </div>
     <div class="container main-header-container flex">
    <div>
-     <a href="index.html"><img class="logo" src="img/newslogo.png" alt="logo" /></a>
+     <a href="index.html"><img class="logo" src="img/singlelogo.png" alt="logo" /></a>
    </div>
   
    <!-- main header ends here -->
@@ -184,7 +167,7 @@
     <div class="container">
       <div class="footer-container">
         <div class="newslogo">
-          <a href="index.html"><img src="img/newslogo.png" alt="logo"></a>
+          <a href="index.html"><img src="img/singlelogo.png" alt="logo"></a>
         </div>
         <div>
             <p>Copyright 2022. All Rights Reserved</p>
